--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "seed:dev": "nodemon ./db/seed.js",
     "seed": "node ./db/seed.js",
-    "start": "node index.js",
-    "start:dev": "nodemon index.js"
+   "start:dev": "nodemon index.js", 
+   "start": "node index.js"
+    
   },
   "keywords": [],
   "author": "",
